# break_time

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
break_time/: __init__.py  break_time.py  gui.py  run.py
break_time/config/: break_time.json  config.py  config.yml
break_time/message_box/: message_box.py
break_time/sound/: sound.py
break_time/utils/: activity.py  util.py
src/break_time/: run.py
src/break_time/config/: break_time.json  config.py  config.yml
src/break_time/sound/: sound.py
src/break_time/utils/: activity.py  frames.py  gui.py  util.py
tests/: test_break_time.py  test_message_box.py  test_sound.py
